  * Disable G-I on kfreebsd-*.
  * Document booting d-i from grub2. Closes: #612165.
  * Mention preseeding as an alternative for accessibility.
  * Document that the text installer is selected by default.

  [ Joey Hess ]
  * Fix typo in example preseed. Closes: #612631

  [ Didier Raboud ]
  * Document win32-loader as a possible boot method. Closes: #444017.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 21:47:31 +0100

installation-guide (20110122) unstable; urgency=low

  [ Frans Pop ]
  * List myself as one of the main authors in the administrativa appendix.
  * Clarify IP addresses in example for booting SS4000-E (arm). Thanks to
    Miroslav Kure for the patch.
  * Add link to boot screen section in accessibility section. Closes: #579954.

  [ Martin Michlmayr ]
  * Update links for ARM images.

  [ Samuel Thibault ]
  * Update brltty version.
  * Document booting from DOS (Closes: Bug#518808).
  * Add non-Linux infrastructure to the build system.
  * Add kFreeBSD infrastructure.
  * Replace Linuxish bits with per-port entities.
  * Rephrase Hurd-specific paragraph explaining that Debian GNU/Hurd is not
    Linux.
  * Add a "What is Debian GNU/kFreeBSD" section.
  * Add the list of architectures supported by the kFreeBSD port.
  * Restrict "Board Devices" accessibility section to Linux.
  * Fix port URL for non-Linux ports.
  * Fix "hardware" part for non-Linux ports. Now needs fine-tune from BSD
    people.
  * Fix "boot-installer" part for non-Linux ports. Still needs extensive
    review from BSD people.
  * Fix "preparing", "using-d-i", "boot-new", "post-install", "howto",
    "preseed", "partitioning", and "random-bits" parts for non-Linux ports.
  * Factorize os-specific parameters in build/arch-options.
  * Rename debian entity to debian-gnu. Introduce new debian entity which just
    stands for "Debian".
  * Rename Mandrake into Mandriva (Closes: Bug#601308).
  * Update installation sizes for amd64 instead of i386.