@@ -150,9 +150,11 @@ installer. The current possible parameter settings are:
 
 The default frontend is <userinput>DEBIAN_FRONTEND=newt</userinput>.
 <userinput>DEBIAN_FRONTEND=text</userinput> may be preferable for
-serial console installs. Generally, only the
-<userinput>newt</userinput> frontend is available on default install
-media. On architectures that support it, the graphical installer uses
+serial console installs. Some specialized types of install media may
+only offer a limited selection of frontends, but the
+<userinput>newt</userinput> and <userinput>text</userinput> frontends
+are available on most default install media.
+On architectures that support it, the graphical installer uses
 the <userinput>gtk</userinput> frontend.
 
 </para></listitem>
