@@ -13,6 +13,10 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   [ Didier Raboud ]
   * Document win32-loader as a possible boot method. Closes: #444017.
 
+  [ Colin Watson ]
+  * The text frontend is available on most default install media.  Adjust
+    the Boot Parameters section to say so.
+
  -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 21:47:31 +0100
 
 installation-guide (20110122) unstable; urgency=low
